Add cloudbox console to get an interactive shell over ssh allowing all cloudbox commands.
- Update the cloudbox scripts
- Default to the cloudbox console when SSHing into the box

--- a/board/odroidxu4s/rootfs-overlay/var/www/setup/index.html
+++ b/board/odroidxu4s/rootfs-overlay/var/www/setup/index.html
@@ -18,7 +18,7 @@
   <body>
     <main>
         <h1>Complete your installation</h1>
-        <p>Configure your cloudbox running <code>ssh app@cloudbox.local</code></p>
+        <p>Configure your cloudbox running <code>ssh -t app@cloudbox.local setup</code></p>
     </main>
   </body>
 </html>
